--- a/cake.html
+++ b/cake.html
@@ -15,13 +15,13 @@
             <img class="cake-logo" src="img/cakelogo.jpg" width="30" alt="">
         </div>
         <div class="navbar">
-            <a><button>Home</button></a>
-            <a>About Us</a>
-            <a>Menu</a>
-            <a>Contact</a>
+            <div class="home-div"><a>Home</a></div>
+            <div><a>About Us</a></div>
+            <div><a>Menu</a></div>
+            <div><a>Contact</a></div>
         </div>
         <div class="right-section">
-            <button>Sign up</button>
+            <button class="signup-btn">Sign up</button>
         </div> 
            
         </div>
@@ -32,8 +32,10 @@
             providing <span class="paragraph-line2"> as many choices as possible</span> 
              </p>
          </div>
-         <button>Get Started</button>
-         <button>Watch Demo</button>
+         <div class="action-btns">
+         <button class="getstarted-btn">Get Started</button>
+         <button class="demo-btn">Watch Demo</button>
+        </div>
     </div>
 </body>
 </html>
